# OBS-WebRTC-Link

./: .clang-format  .clang-tidy  .cmake-format.yaml  .cppcheck-suppressions  .editorconfig  .gitignore  .gitmodules  BUILD.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  Doxyfile  README.md
.claude/: settings.local.json
.claude/commands/: docs.md  explain.md  fix-lint.md  gh-bug-create.md  gh-ci-fix.md  gh-feature-create.md  gh-issue.md  gh-issues-from-readme.md  gh-project.md  gh-template.md  improve.md  pr-review.md  refactor.md  test.md
.codex/: settings.local.json
.codex/prompts/: docs.md  explain.md  fix-lint.md  gh-bug-create.md  gh-feature-create.md  gh-issue.md  gh-issues-from-readme.md  gh-project.md  gh-template.md  improve.md  pr-review.md  refactor.md  test.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/scripts/: create-linux-install.sh  create-macos-install.sh  create-windows-install.bat
.github/workflows/: README.md  benchmark.yml  build.yml  format-check.yml  release.yml  static-analysis.yml  test.yml
cmake/: FindLibDataChannel.cmake  README.md
data/locale/: en-US.ini  ja-JP.ini
docker/livekit/: .env.example  docker-compose.yml  livekit.yaml
docs/: API-REFERENCE.md  ARCHITECTURE.md  CONTRIBUTING.md  DEVELOPMENT.md  INSTALL.md  LIVEKIT_SETUP.md  OBS-WebRTC-Link-Project-Structure.md  README.md  TESTING.md  USAGE_EXAMPLES.md  WINDOWS_DEVELOPMENT.md
docs/images/: README.md
installer/windows/: README.md  build-installer.ps1  obs-webrtc-link.nsi
scripts/: bump-version.ps1  bump-version.sh  check-format.sh  format-code.sh  setup-windows-dev.ps1  tdd-watch.ps1  test.bat
src/: plugin-main.cpp
src/core/: audio-only-config.cpp  audio-only-config.hpp  connection-manager.cpp  connection-manager.hpp  constants.hpp  hardware-encoder.cpp  hardware-encoder.hpp  http-client.cpp  http-client.hpp  network-statistics.cpp  network-statistics.hpp  p2p-connection.cpp  p2p-connection.hpp  peer-connection.cpp  peer-connection.hpp  reconnection-manager.cpp  reconnection-manager.hpp  signaling-client.cpp  signaling-client.hpp  whep-client.cpp  whep-client.hpp  whip-client.cpp  whip-client.hpp
src/output/: obs-webrtc-output.cpp  obs-webrtc-output.hpp  webrtc-output.cpp  webrtc-output.hpp
src/source/: obs-webrtc-source.cpp  obs-webrtc-source.hpp  webrtc-source.cpp  webrtc-source.hpp
src/ui/: README.md  settings-dialog.cpp  settings-dialog.hpp
tests/: CMakeLists.txt
tests/benchmarks/: CMakeLists.txt  README.md  media_throughput_benchmark.cpp  p2p_connection_benchmark.cpp  scalability_benchmark.cpp  whep_connection_benchmark.cpp  whip_connection_benchmark.cpp
tests/integration/: CMakeLists.txt  README.md  e2e_flow_test.cpp  livekit_integration_test.cpp  memory_leak_test.cpp  p2p_integration_test.cpp  performance_test.cpp  stability_test.cpp
tests/integration/docker/: docker-compose.yml  livekit.yaml
tests/integration/helpers/: livekit_docker_manager.cpp  livekit_docker_manager.hpp  test_helpers.cpp  test_helpers.hpp  test_signaling_server.cpp  test_signaling_server.hpp
tests/integration/scripts/: run_integration_tests.ps1  run_integration_tests.sh
tests/unit/: CMakeLists.txt  audio_only_mode_test.cpp  connection_manager_test.cpp  hardware_encoder_test.cpp  network_statistics_test.cpp  p2p_connection_test.cpp  peer_connection_test.cpp  reconnection_manager_test.cpp  sample_test.cpp  settings_dialog_test.cpp  signaling_client_test.cpp  version_test.cpp  webrtc_output_test.cpp  webrtc_source_test.cpp  whep_client_test.cpp  whip_client_test.cpp
